kube/snake/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snake-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
