kube/snake/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: snake-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    # traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: dev.tomarrell.com
      http:
        paths:
          - path: /snake
            pathType: Prefix
            backend:
              service: 
                name: snake-service
                port:
                  number: 80
